<resources>
    <string name="app_name">ken Demo</string>
    <string name="lbl_company_name">Company Name</string>

    <string name="lbl_register_device">Register Device</string>

    <string name="enter_info_below">Enter information below</string>
    <string name="partner_id">Partner ID</string>
    <string name="token">Token</string>
    <string name="sign_in">Sign in</string>

    <string name="request_account">Request Account</string>

    <string name="new_here_signup">New here? Sign Up</string>

    <string name="loading_1">Loading.</string>
    <string name="loading_2">Loading..</string>
    <string name="loading_3">Loading...</string>

    <string name="error_partner_id">Input partner Id</string>

    <string name="error_token">Input Token</string>
    <string name="skip">Skip</string>
<string name="error_no_inquiry">Please select inquiry type</string>

    <string name="inquiry_sent">Your inquiry has been sent!</string>

    <string name="error_no_subject">Please input subject</string>
    <string name="error_no_message">Please input message</string>
    <string name="latest_news">Latest News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>

    <string name="contact_us">Contact us: 1.800.8000</string>

    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="want_to_login">Want to login?</string>
    <string name="dismiss">Dismiss</string>
    <string name="login">Login</string>
    <string name="update_app">Update your app?</string>
    <string name="update_message">Morbi auctor, sapeorns ac mollis luctus, orcinulim leo lobortis sapien, a rhoncus magna eution ullamco aliquip ex...</string>
    <string name="yes">Yes</string>
    <string name="load_more">Load More News</string>
    <string name="undo">Undo</string>
    <string name="item_removed">Item has been removed</string>

    <string name="inquiry_form">Inquiry Form</string>

    <string name="inquiry_sub_title">Lorem ipsum dolar sid amut edo conceptetetuazuze zabaro silantis apu</string>

    <string name="type_of_enquiry">Type of Inquiry</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_inquiry">Send Inquiry</string>
    <string-array name="type_inquiry">
        <item>@string/type_of_enquiry</item>
        <item>Inquiry type</item>
    </string-array>

    <string name="news_feed">NewsFeed</string>

    <string name="favorites">Favorites</string>

    <string name="archive">Archive</string>
    <string name="inquiry">Inquiry</string>
    <string name="favourite">Favorites</string>

    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="products">Products</string>

    <string name="support">Support</string>
    <string name="youtube">Youtube</string>

    <string name="download">Download</string>

    <string name="view">View</string>
    <string name="send_message">Send a message..</string>
    <string-array name="tab_title">
        <item>@string/news_feed</item>

        <item>@string/favorites</item>

        <item>@string/archive</item>
    </string-array>

    <string name="all_messages">All Messages</string>
    <string name="archive_messages">Archived Messages</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="reload">Reload</string>
    <string name="bookmark">Bookmark</string>
    <string-array name="message_tab_title">
        <item>@string/all_messages</item>

        <item>@string/archive_messages</item>

    </string-array>

    <string name="error_player">Error in youtube player</string>
    <string-array name="dummy_email_array">
        <item>peterpeterson@gmail.com</item></string-array>
</resources>

