<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@mipmap/ic_star_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_bookmark_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@mipmap/ic_forum_black_24dp"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_inquiry"
            android:icon="@mipmap/ic_forum_black_24dp"
            android:title="@string/inquiry" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@mipmap/ic_forum_black_24dp"
            android:title="@string/youtube" />
    </group>
    <item
        android:id="@+id/nav_products"
        android:icon="@mipmap/ic_local_offer_black_24dp"
        android:title="@string/products">

    </item>
    <item
        android:id="@+id/nav_support"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/support" />

</menu>
