<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:icon="@mipmap/ic_arrow_back_white_24dp"
        android:orderInCategory="1"
        android:title="@string/back"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:icon="@mipmap/ic_arrow_forward_white_24dp"
        android:orderInCategory="1"
        android:title="@string/forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@mipmap/ic_refresh_white_24dp"
        android:orderInCategory="1"
        android:title="@string/reload"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@mipmap/ic_star_white_24dp"
        android:orderInCategory="1"
        android:title="@string/bookmark"
        app:showAsAction="always" />
</menu>