<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt_register_device"
            style="@style/text_heading_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register_device"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_enter_info"
            style="@style/text_normal_14dp" android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_info_below"
            android:textColor="@color/white" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="40dp" android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" android:textColorHint="@color/white"
            android:layout_width="match_parent" android:layout_marginLeft="40dp"
            android:layout_height="wrap_content">
            <EditText android:hint="@string/partner_id"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_width="match_parent" android:inputType="number" android:imeOptions="actionNext"
                android:layout_height="wrap_content" android:id="@+id/edt_partner_id"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp" android:textColorHint="@color/white"
            android:layout_width="match_parent" android:layout_marginLeft="40dp"
            android:layout_height="wrap_content">
            <EditText android:hint="@string/token"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_width="match_parent" android:inputType="textPassword" android:imeOptions="actionDone"
                android:layout_height="wrap_content" android:id="@+id/edt_token"/>

        </android.support.design.widget.TextInputLayout>
        <Button android:background="@drawable/button_selector" android:layout_margin="40dp"
            style="@style/text_normal_14dp"
            android:textColor="@color/white" android:id="@+id/btn_sign_in"
            android:layout_width="match_parent" android:text="@string/sign_in"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/img_scan_qr_code"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@mipmap/ic_launcher" />
        <LinearLayout android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_gravity="bottom"
            android:layout_width="match_parent" android:orientation="horizontal"
            android:layout_height="wrap_content" android:layout_marginBottom="40dp">
            <TextView style="@style/text_normal_14dp"
                android:id="@+id/txt_request_account" android:textColor="@color/white"
                android:layout_width="0dp" android:layout_weight="1" android:layout_gravity="left"  android:text="@string/request_account"
                android:layout_height="wrap_content" />

            <TextView style="@style/text_normal_14dp" android:textColor="@color/white"
                android:id="@+id/txt_sign_up_new_user" android:layout_marginLeft="20dp"
                android:layout_width="wrap_content" android:layout_gravity="right"  android:text="@string/new_here_signup"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>