<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="20dp">

        <TextView
            style="@style/text_heading_22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/inquiry_form"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            style="@style/text_normal_14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/inquiry_sub_title"
            android:textSize="15dp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_inquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:entries="@array/type_inquiry"></android.support.v7.widget.AppCompatSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edt_subject_inquiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/text_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edt_message_inquiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|start"
                android:hint="@string/message"
                android:imeOptions="actionDone|actionNext"
                android:inputType="text"
                android:maxLines="6"
                android:minLines="3"
                android:textColor="@color/text_normal" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_inquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_selector"
            android:text="@string/send_inquiry"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>