<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/card_style" android:id="@+id/card_login_view"
        tools:ignore="MissingPrefix">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent" android:background="@color/white"
    android:layout_height="wrap_content" android:id="@+id/lnr_login_view">
<TextView
    android:layout_width="match_parent" android:layout_margin="10dp"
    android:layout_height="wrap_content" style="@style/text_heading_20dp"
android:text="@string/want_to_login"
    />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp" android:background="@color/grey" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnr_dismiss_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_clear_black_24dp" />

            <TextView
                style="@style/text_normal_11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/dismiss" />
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/lnr_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_person_black_24dp" />

            <TextView
                style="@style/text_normal_11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_update_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/card_style"
        tools:ignore="MissingPrefix">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent" android:background="@color/colorPrimary"
        android:layout_height="wrap_content" android:id="@+id/lnr_update_app_view">
        <TextView
            android:layout_width="match_parent" android:layout_margin="10dp" android:textColor="@color/white"
            android:layout_height="wrap_content" style="@style/text_heading_20dp"
            android:text="@string/update_app"
            />
        <TextView
            android:layout_width="match_parent" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" android:textColor="@color/white"
            android:layout_height="wrap_content" style="@style/text_normal_14dp"
            android:text="@string/update_message"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp" android:background="@color/grey_dark" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnr_dismiss_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_clear_white_24dp" />

                <TextView
                    style="@style/text_normal_11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textColor="@color/white"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dismiss" />
            </LinearLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_dark" />

            <LinearLayout
                android:id="@+id/lnr_yes_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_done_white_24dp" />

                <TextView
                    style="@style/text_normal_11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textColor="@color/white"
                    android:layout_marginLeft="5dp"
                    android:text="@string/yes" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/card_load_more_view"
        style="@style/card_style"
        tools:ignore="MissingPrefix">
    <TextView
        style="@style/text_normal_11dp" android:background="@color/white"
        android:layout_width="match_parent" android:id="@+id/load_more_txt"
        android:layout_height="wrap_content" android:gravity="center"
        android:layout_marginLeft="5dp" android:padding="10dp"
        android:text="@string/load_more" />
    </android.support.v7.widget.CardView>
</LinearLayout>