<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_login_view"
    style="@style/card_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    card_view:cardCornerRadius="1dp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/lnr_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/text_heading_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/want_to_login" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnr_dismiss_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_clear_black_24dp" />

                <TextView
                    style="@style/text_normal_11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  android:gravity="center" android:paddingTop="7dp" android:paddingBottom="7dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dismiss" />
            </LinearLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/lnr_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_person_black_24dp" />

                <TextView
                    style="@style/text_normal_11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  android:gravity="center" android:paddingTop="7dp" android:paddingBottom="7dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

